# hsevo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
docs/: detailed_topic_specification.md  table_of_contents.md
gui_player_logics/: hunter.txt  warlock.txt  warrior.txt
include/: AIPlayer.h  Board.h  Card.h  Deck.h  EndTurnAction.h  EvoPlayerLogic.h  Game.h  GameStateInput.h  Hand.h  HitHeroAction.h  Minion.h  PlayCardAction.h  Player.h  PlayerLogic.h  PlayerState.h  RandomPlayerLogic.h  Rng.h  SimpleEvo.hpp  TradeAction.h  card_definitions.h  decklists.h
include/ai/: ActivationFunc.hpp  Connection.h  EvoConfig.h  EvoScorer.hpp  EvoSpecimen.h  EvoSpecimen.hpp  GameStateInput.h  Genome.h  NEAT.h  NEATConfig.h  Network.h  Network.hpp  SimpleEvo.h  SimpleEvo.hpp  evo_functions.hpp
include/gui/: CardElement.h  DeckElement.h  DeckSelection.h  DiscoverElement.h  EOTElement.h  GameGui.h  GuiElement.h  GuiPlayerLogic.h  HeroElement.h  HeroPowerElement.h  MinionElement.h  PostGameScreen.h  WeaponElement.h  utils.h
include/logic/: Action.h  Board.h  Card.h  Deck.h  Decklist.h  EndTurnAction.h  Entity.h  FightAction.h  Game.h  Hand.h  Hero.h  HeroHitHeroAction.h  HeroPowerAction.h  HeroTradeAction.h  HitHeroAction.h  Minion.h  MinionKeywords.h  OnPlayArg.h  PlayCardAction.h  PlayMinionAction.h  PlaySpellAction.h  Player.h  PlayerState.h  TargetType.h  TradeAction.h  Tribe.h  Weapon.h  card_definitions.h  decklists.h  run_game.h
include/logic/cards/: AbusiveSergeant.h  AcolyteOfPain.h  Alexstraza.h  AncientWatcher.h  ArcaneGolem.h  Armorsmith.h  AzureDrake.h  BaineBloodhoof.h  BaronGeddon.h  BigGameHunter.h  BloodFury.h  BoulderfistOgre.h  Brawl.h  CairneBloodhoof.h  Card.h  Coin.h  CruelTaskmaster.h  DefenderOfArgus.h  EaglehornBow.h  EarthenRingFarseer.h  Execute.h  ExplosiveTrap.h  FacelessManipulator.h  FieryWarAxe.h  Flare.h  FreezingTrap.h  GrommashHellscream.h  HandCard.h  Hellfire.h  Hound.h  HuntersMark.h  Infernal.h  KillCommand.h  KorkronElite.h  LeeroyJenkins.h  LeperGnome.h  LordJaraxxusCard.h  MinionCard.h  Misdirection.h  MoltenGiant.h  (+30 more)
include/logic/heroes/: GarroshHellscream.h  GulDan.h  Hero.h  LordJaraxxus.h  Rexxar.h
include/players/: EvoPlayerLogic.h  EvoPlayerLogic.hpp  PlayerLogic.h  RandomPlayerLogic.h
include/utils/: GuiElementId.h  Rng.h
scripts/: draw_plots.py
src/: AIPlayer.cc  Board.cc  Card.cc  Deck.cc  EndTurnAction.cc  EvoPlayerLogic.cc  Game.cc  GameStateInput.cc  Hand.cc  HitHeroAction.cc  Minion.cc  PlayCardAction.cc  Player.cc  PlayerState.cc  RandomPlayerLogic.cc  Rng.cc  SimpleEvo.cc  TradeAction.cc  card_definitions.cc  decklists.cc  draw_network.cc  gui.cc  main.cc  run_experiment.cc
src/ai/: ActivationFunc.cc  Connection.cc  EvoConfig.cc  EvoScorer.cc  EvoSpecimen.cc  GameStateInput.cc  Genome.cc  NEAT.cc  NEATConfig.cc  Network.cc  SimpleEvo.cc
src/gui/: CardElement.cc  DeckElement.cc  DeckSelection.cc  DiscoverElement.cc  EOTElement.cc  GameGui.cc  GuiElement.cc  GuiPlayerLogic.cc  HeroElement.cc  HeroPowerElement.cc  MinionElement.cc  PostGameScreen.cc  WeaponElement.cc  utils.cc
src/logic/: Action.cc  Board.cc  Card.cc  Deck.cc  EndTurnAction.cc  Entity.cc  FightAction.cc  Game.cc  Hand.cc  Hero.cc  HeroHitHeroAction.cc  HeroPowerAction.cc  HeroTradeAction.cc  HitHeroAction.cc  Minion.cc  MinionKeywords.cc  OnPlayArg.cc  PlayCardAction.cc  PlayMinionAction.cc  PlaySpellAction.cc  Player.cc  PlayerState.cc  TradeAction.cc  Weapon.cc  card_definitions.cc  decklists.cc  run_game.cc
src/logic/cards/: AbusiveSergeant.cc  AcolyteOfPain.cc  Alexstraza.cc  ArcaneGolem.cc  Armorsmith.cc  AzureDrake.cc  BaronGeddon.cc  BigGameHunter.cc  Brawl.cc  CairneBloodhoof.cc  Card.cc  Coin.cc  CruelTaskmaster.cc  DefenderOfArgus.cc  EaglehornBow.cc  EarthenRingFarseer.cc  Execute.cc  ExplosiveTrap.cc  FacelessManipulator.cc  Flare.cc  FreezingTrap.cc  GrommashHellscream.cc  HandCard.cc  Hellfire.cc  HuntersMark.cc  KillCommand.cc  LeeroyJenkins.cc  LeperGnome.cc  LordJaraxxusCard.cc  MinionCard.cc  Misdirection.cc  MoltenGiant.cc  MortalCoil.cc  MountainGiant.cc  PowerOverwhelming.cc  RagnarosTheFirelord.cc  SacrificialPact.cc  SecretCard.cc  Shadowflame.cc  ShieldBlock.cc  (+20 more)
src/logic/heroes/: GarroshHellscream.cc  GulDan.cc  Hero.cc  LordJaraxxus.cc  Rexxar.cc
src/players/: EvoPlayerLogic.cc  RandomPlayerLogic.cc
src/utils/: Rng.cc
test/: test_ai.cc  test_cards.cc  test_game.cc  test_heroes.cc
